--- a/Boredom_Project/templates/type.html
+++ b/Boredom_Project/templates/type.html
@@ -24,7 +24,7 @@
 <input class="btn" type = "button" onclick="find_activity_types(value)" value="social"/>
 <input class="btn" type = "button" onclick="find_activity_types(value)" value="cooking"/>
 <input class="btn" type = "button" onclick="find_activity_types(value)" value="busywork"/>
-<input class="button" type = "button" onclick="find_activity_types(value)" value="diy"/>
+<input class="btn" type = "button" onclick="find_activity_types(value)" value="diy"/>
 </div>
 <div class=padding></div>
 
